# mini-dex-manipulation

./: .gitignore  README.md
.superpowers/sdd-sim-policy/: final-review.diff  progress.md  stretch-vecnorm-report.md  stretch-vecnorm-spec.md  task-4-brief.md  task-4-report.md  task-5-brief.md  train-real-run.pid
ops_dashboard/: app.py  data.py  report.py  requirements.txt
ops_dashboard/tests/: test_data.py  test_report.py
perception/: capture.py  dump_sequence.py  requirements.txt
perception/tests/: test_capture_schema.py
ros2_bridge/: .gitignore
ros2_bridge/mini_dex_bridge/: package.xml  setup.cfg  setup.py
ros2_bridge/mini_dex_bridge/mini_dex_bridge/: capture_node.py  policy_node.py  replay.py  transforms.py
ros2_bridge/mini_dex_bridge/test/: test_transforms.py
shared/fixtures/: capture_sample.json  rollout.json
shared/schema/: capture_schema.json  rollout_schema.json
sim_policy/: bc_pretrain.py  env_check.py  evaluate.py  record_demo.py  requirements.txt  train.py
sim_policy/tests/: test_rollout_schema.py
